--- a/index.html
+++ b/index.html
@@ -4,75 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module1</title>
-    <style>
-     * {
-            box-sizing: border-box;
-        }
-.head {
-    padding: 50px;
-    text-align: center;   
-}
-*{
-    box-sizing: border-box;
-    
-}
-.p1{
-    float: left;
-    width: 30%;
-    padding: 10px;
-    height: 170px;
-    margin: 19px;
-    border: 1px solid black;
-    background-color: gray;
-}
-h3{
-    border: 1px solid black;
-    background-color: rosybrown;
-    float: right;
-    margin-right: -10px;
-    margin-top: -10px;
-    clear: right;
-}
-
-#sushi{
-    width: 80px;
-    text-align: center;
-    background-color: beige;
-}
-#beef{
-    width: 80px;
-    text-align: center;
-    background-color: brown;
-}
-#chicken{
-    width: 80px;
-    text-align: center;
-}
-@media (min-width:992px) {
-    #chicken{
-        width: 33.33%;
-    }
-    #beef{
-        width: 33.33%;
-    }
-    #sushi{
-        width: 33.33%;
-    }
-}
-    @media (min-width:768px) and (max-width:991px){
-        #chicken{
-        width: 25%;
-    }
-    #beef{
-        width: 25%;
-    }
-    #sushi{
-        width: 50%;
-    }
-        
-}
-
-    </style>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
    <h1 class="head">our menu</h1>
